@@ -994,6 +994,15 @@ YEARDESC=year #
 # Default is: ^N%E<^h%hhp ^m%mm ^v%vmv^N>
 DEFAULTPROMPT=^N%E<^h%hhp ^m%mm ^v%vmv^N>
 
+# PROMPTBEHAVIOR - This changes the default settings for all prompts.
+# Changing this stuff makes Mudlet work, and breaks many other clients.
+# Values are:
+# NORMAL - No extra carriage returns, No Go-Ahead telnet code
+# GACRLF - Add extra carriage returns, Add Go-Ahead telnet code 
+# GA - No extra carriage returns, Add Go-Ahead telnet code 
+# CRLF - Add extra carriage returns, No Go-Ahead telnet code
+PROMPTBEHAVIOR=NORMAL 
+
 # EXPIRATIONS - A list of minutes denoting when various items, once placed
 # into a room directly or indirectly by your players, will expire and
 # be automatically cleaned up out of the world.  The values in the list are
