@@ -1382,6 +1382,13 @@
 		<FONT COLOR=WHITE>@INIValue?MASK=DEFAULTPROMPT&INIHELP@
 		</TD></TR>
 		
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>PROMPTBEHAVIOR</FONT>
+		</TD><TD WIDTH=80% VALIGN=TOP>
+		<INPUT TYPE=TEXT NAME=PROMPTBEHAVIOR SIZE=20 VALUE="@INIValue?MASK=PROMPTBEHAVIOR&VALUE@">
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=PROMPTBEHAVIOR&INIHELP@
+		</TD></TR>
+		
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>COLORSCHEME</FONT>
 		</TD><TD WIDTH=80% VALIGN=TOP>
 		<TEXTAREA NAME=COLORSCHEME COLS=60 ROWS=3>@INIValue?MASK=COLORSCHEME&VALUE@</TEXTAREA>
